feat: add new fields unity_reference and fraction_reference
