# src/main/routes/product.ts
@@ -13,5 +13,5 @@ export default (router: Router): void => {
   router.get('/products/:code', async (req, res) => makeGetProductByCodeController().handle(req, res))
   router.post('/products', async (req, res) => makeCreateProductController().handle(req, res))
   router.put('/products/:code', async (req, res) => makeUpdateProductController().handle(req, res))
-  router.get('/products/groups/:group_code', async (req, res) => makeGetProductsByGroupCodeController().handle(req, res))
+  router.get('/products/products-by-group/:group_code', async (req, res) => makeGetProductsByGroupCodeController().handle(req, res))
 }
